--- a/result/templates/index.html
+++ b/result/templates/index.html
@@ -3,6 +3,6 @@
 {% block title %}Janardan Rai Nagar Rajasthan Vidhyapeeth{% endblock title %}
 {% block body %}
 <img src="/static/img/1.png"  alt="...">
-<img src="/static/img/2.png"  alt="...">
+<a href="/search"><img src="/static/img/2.png"  alt="...">
 <img src="/static/img/3.png"  alt="...">
 {% endblock body %}
