--- a/result/templates/student.html
+++ b/result/templates/student.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Student Result Search{% endblock title %}
+{% block title %}Student Result Upload{% endblock title %}
 
 {% block body %}
 <a href="/"><img src="/static/img/1.png"  alt="..."></a>
