--- a/result/templates/result1.html
+++ b/result/templates/result1.html
@@ -112,7 +112,7 @@
   </table>
   <p class="mb-0 mt-0">Result Date: {{student.result_date}} </p>
   <h4 style="color:red" align="center">:- Disclaimer Notice & Legal Warning :- </h4>
-  <h4 style="color:red" align="center"> In case of any discrepancy, marksheet issued by MGS </h4>
+  <h4 style="color:red" align="center"> In case of any discrepancy, marksheet issued by JRN </h4>
   <h4 style="color:red" align="center"> UNIVERSITY should be considered as authentic. </h4>
 </div>
 
