--- a/result/templates/404.html
+++ b/result/templates/404.html
@@ -3,5 +3,8 @@
 {% block title %}404 Error{% endblock title %}
 
 {% block body %}
-<h2>Page not found</h2>
+<div class="container-fluid me-1 mt-2">
+    <h2>Page Not Found</h2>
+    <a href="/result"><p>Back to the website</p></a>
+</div>
 {% endblock body %}
