--- a/result/templates/search_name.html
+++ b/result/templates/search_name.html
@@ -51,7 +51,7 @@
 {% endifequal %}
 {% ifequal error "yes" %}
 <script>
-    alert('Please enter correct name');
+    alert('Please enter correct name or semester');
 </script>
 {% endifequal %}
 
